; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_set_property.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_set_property.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @script_set_property to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @script_set_property(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i32 @jclient(i32* %4)
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @js_tostring(i32* %6, i32 1)
  %8 = load i32*, i32** %2, align 8
  %9 = call i32 @js_tostring(i32* %8, i32 2)
  %10 = call i32 @mpv_set_property_string(i32 %5, i32 %7, i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32*, i32** %2, align 8
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @push_status(i32* %11, i32 %12)
  ret void
}

declare dso_local i32 @mpv_set_property_string(i32, i32, i32) #1

declare dso_local i32 @jclient(i32*) #1

declare dso_local i32 @js_tostring(i32*, i32) #1

declare dso_local i32 @push_status(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
